assets/css/style-blue.css
/* ... */
.lgx-post-wrapper article footer .lgx-share li a i {
  font-size: 16px;
  line-height: 40px;
}

.lgx-post-wrapper article footer .lgx-share li a:hover {
  background: #1976d2;
  color: #fff;
}

.lgx-page-wrapper-none {
  padding: 0;
}

/*SINGLE NEWS*/
/********************************************************************/
/* 4. Global RESPONSIVE STYLES
*********************************************************************/
/* ---------------------------------------------------------------------------
    Customized by Riaz Sagar
 ---------------------------------------------------------------------------
    Min-Width: Refers to everything greater than or equal to the amount given.
    Max-Width: Refers to everything less than or equal to the amount given.
 ---------------------------------------------------------------------------/*

/* -----------------------------------------------------------------------
    Large devices (large desktops, 1200px and up)
 ------------------------------------------------------------------------*/
@media (min-width: 1200px) {
  /************** 1200 GLOBAl USE***********/
  /************** 1200 GLOBAl USE END***********/
}

/* -----------------------------------------------------------------------
     Medium devices (desktops, UP TO 1199px~992px)
 ------------------------------------------------------------------------*/
@media (max-width: 1199px) {

  /************** 1199 GLOBAl USE***********/
  html {
    font-size: 55%;
  }

  .lgx-banner-info-circle {
    margin-right: 2rem;
  }

  .lgx-banner-info-circle .info-circle-inner {
    width: 400px;
    height: 400px;
  }

  .lgx-banner-info-circle .info-circle-inner .date {
    padding-top: 2rem;
  }

  .lgx-subscribe-form .lgx-btn {
    height: 50px;
  }

  .lgx-inner-countdown .countdown-left-info {
    width: 40%;
  }

  .lgx-inner-countdown .countdown-right {
    margin: 6.8rem auto 0;
  }

  /************** 1199 GLOBAl USE END***********/
}

/* ----------------------------------------------------------------------
     Small devices (tablets, UP TO 991px~768px)
 -----------------------------------------------------------------------*/
@media (max-width: 991px) {

  /************** 991 GLOBAl USE***********/
  html {
    font-size: 53%;
  }

  .lgx-banner-info-circle .info-circle-inner {
    width: 350px;
    height: 350px;
  }

  .lgx-cart-area .lgx-btn {
    padding: 1.2rem 2rem;
  }

  .lgx-about-img {
    margin-right: 0;
    margin-bottom: 4.2rem;
  }

  .lgx-about {
    background: #fff;
  }

  .lgx-about-video {
    margin-bottom: 4.2rem;
  }

  .lgx-about-registration-box {
    margin-top: 4.2rem;
  }

  .lgx-about-video .lgx-video-area {
    margin-top: 4.2rem;
  }

  .sponsors-area .single {
    width: 32%;
  }

  .lgx-single-news {
    margin-bottom: 4.2rem;
  }

  .lgx-registration-area {
    display: block;
  }

  .lgx-registration-area .lgx-single-registration {
    width: 50%;
    float: left;
  }

  .lgx-registration-area2 .lgx-single-registration {
    width: 47%;
    float: left;
    margin-bottom: 2rem;
  }

  .lgx-milestone .lgx-counter-area {
    margin-bottom: 9rem;
  }

  .sponsors-area-bg .single {
    min-height: auto;
  }

  .lgx-col5 {
    width: 25%;
  }

  .lgx-col4 {
    width: 33.33%;
  }

  .lgx-col3 {
    width: 50%;
  }

  .lgx-col2 {
    width: 50%;
  }

  .lgx-box-layout {
    padding: 0 2rem;
  }

  .lgx-about-img-sp {
    margin-top: 4.2rem;
  }

  .lgx-registration-area .lgx-single-registration {
    width: 48%;
    margin-bottom: 2.6rem;
  }

  /************** 991 GLOBAl USE END ***********/
}
/* ... */

